2010-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests defs: new variable $top_testsrcdir.
	* tests/defs.in ($top_testsrcdir): Define unconditionally
	to @abs_top_srcdir@.  Use it throughout.
	* tests/ar-lib.test: Use `$top_testsrcdir' instead of
	`$testsrcdir/..'.
	* tests/auxdir.test: Likewise.
	* tests/compile.test: Likewise.
	* tests/compile2.test: Likewise.
	* tests/compile3.test: Likewise.
	* tests/compile5.test: Likewise.
	* tests/mdate6.test: Likewise.
	* tests/mkinst3.test: Likewise.
	* tests/multlib.test: Likewise.
	* tests/txinfo22.test: Likewise.

	Tests defs: $srcdir is unconditionally substituted.
	* tests/defs.in ($srcdir): Define unconditionally to @abs_srcdir@.
	Remove code for $srcdir normalization, which is now useless.

2010-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests defs: make spacing more consistent.
	* tests/defs.in: Make spacing more consistent in indentation.
	Especially, indent using only spaces, not tabs.  Also, move
	a comment to a better position.

	Improve code for requiring libtool and gettext in tests.
	* tests/defs.in: Stricter (and more correct) detection of wheter
	libtool, libtoolize and/or gettext are in $required.

2010-08-31  Peter Rosin  <peda@lysator.liu.se>

	Do file name conversion for object files in the compile wrapper.
	* lib/compile (func_cl_wrapper): Do file name conversion for object
	files (i.e. extensions .obj, .OBJ, .o and .O) if needed.
	* lib/compile4.test: Test the above.

2010-08-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Speed up removal of auxiliary linker output files for ltlibraries.
	* lib/am/ltlib.am (clean-%DIR%LTLIBRARIES): Rewrite using just
	one `rm' invocation.
	Report by Bob Friesenhahn.

	Improve robustness of mdate-sh script.
	* lib/mdate-sh: Sanitize zsh behavior on startup, to ensure
	$ls_command is word-split properly upon invocation.
	(error): New function.
	(main): Use it.  Improve error checking to avoid endless loop