@@ -21,7 +21,7 @@
 # Tom Tromey <tromey@cygnus.com>
 
 # Absolutely necessary variable(s).
-srcdir='@abs_srcdir@'
+testsrcdir='@abs_srcdir@'
 top_testsrcdir='@abs_top_srcdir@'
 
 # Protect this file against multiple inclusion, useful for generated tests.
@@ -50,9 +50,9 @@ test -f ./defs || {
    exit 1
 }
 
-# Ensure $srcdir is set correctly.
-test -f "$srcdir/defs.in" || {
-   echo "$srcdir/defs.in not found, check \$srcdir" 1>&2
+# Ensure $testsrcdir is set correctly.
+test -f "$testsrcdir/defs.in" || {
+   echo "$testsrcdir/defs.in not found, check \$testsrcdir" 1>&2
    exit 1
 }
 
@@ -312,6 +312,9 @@ unset DESTDIR
 unset prefix exec_prefix bindir datarootdir datadir docdir dvidir
 unset htmldir includedir infodir libdir libexecdir localedir mandir
 unset oldincludedir pdfdir psdir sbindir sharedstatedir sysconfdir
+# The tests call `make -e' but we do not want $srcdir from the environment
+# to override the definition from the Makefile.
+unset srcdir
 # Also unset variables that control our test driver.  While not
 # conceptually independent, they cause some changed semantics we
 # need to control (and test for) in some of the tests to ensure
@@ -361,7 +364,7 @@ case " $required " in
     # Libtool cannot cope with spaces in the build tree.  Our testsuite setup
     # cannot cope with spaces in the source tree name for Libtool and gettext
     # tests.
-    case $srcdir,`pwd` in
+    case $testsrcdir,`pwd` in
       *\ * | *\	*) Exit 77;;
     esac
     ACLOCAL="$ACLOCAL -Wno-syntax -I $top_testsrcdir/m4 $extra_includes -I $aclocaldir"
@@ -379,11 +382,6 @@ FGREP='@FGREP@'
 # For instance, Windows '95, '98 and ME have 2-second granularity
 # and can be up to 3 seconds in the future w.r.t. the system clock.
 sleep='sleep @MODIFICATION_DELAY@'
-
-# The tests call `make -e' but we do not want $srcdir from the environment
-# to override the definition from the Makefile.
-testsrcdir=$srcdir
-unset srcdir
 
 # An old timestamp that can be given to a file, in "touch -t" format.
 # The time stamp should be portable to all file systems of interest.
