@@ -1,5 +1,10 @@
 2010-09-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests defs: $srcdir and $top_srcdir renaming.
+	* tests/defs.in ($srcdir): Remove, define $testsrcdir directly.
+	* tests/Makefile.am ($(parallel_tests)): Generation of derived
+	tests updated.
+
 	Tests defs: new variable $top_testsrcdir.
 	* tests/defs.in ($top_testsrcdir): Define unconditionally
 	to @abs_top_srcdir@.  Use it throughout.
